--- a/pages/payrollform.html
+++ b/pages/payrollform.html
@@ -148,7 +148,7 @@
             <textarea id="notes" name="Notes" class="input" placeholder="" stye="height:100px"></textarea>
         </div> 
         <div class="button-content">
-            <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+            <a href="./payrollhome.html" class="resetButton button cancelButton">Cancel</a>
             <div class="submit-reset">
                 <button type="submit" class="submitButton button" id="submitButton">Submit</button>
                 <button type="reset" class="resetButton button" onClick="resetForm()">Reset</button>
